--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 277565952452.dkr.ecr.us-east-1.amazonaws.com/project-ecr-repo
+  repository: 194722412226.dkr.ecr.ca-central-1.amazonaws.com/dev-ecr-repo
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "replace_image_tag"
